--- a/map_view.html
+++ b/map_view.html
@@ -117,7 +117,7 @@
   <script src="./js/GLTFLoader.js"></script>
   <div id="map">
     <script>
-    maptilersdk.config.apiKey = 'Jjjb4yKoPaBPVQ3T8Sso';
+    maptilersdk.config.apiKey = 'INSERT API KEY HERE';
     var map = new maptilersdk.Map({
         style: maptilersdk.MapStyle.STREETS,
         center: [103.62129, 1.2654],
